# finance-settlement4QKSDK

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  config.env.example  package.bat  pyproject.toml  setup.bat  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: auth.py  database.py  main.py  models.py  requirements-dev.txt  requirements.txt  run.py  schemas.py  updater.py
backend/data/: column_synonyms.json
backend/routers/: auth.py  basic_data.py  bill_template.py  dashboard.py  import_data.py  memo.py  ocr.py  party_info.py  quicksdk.py  settlement.py  system.py
backend/services/: basic_data_service.py  bill_service.py  bill_template_service.py  company_resolver.py  crypto_service.py  dashboard_service.py  field_definitions.py  fk_resolver.py  flexible_import.py  lock_service.py  ocr_service.py  payment_service.py  profit_service.py  quicksdk_service.py  settlement_formula.py  settlement_query.py  settlement_service.py  snapshot_service.py  split_config_service.py  template_defs.py  template_import.py
backend/templates/: channel_split.xlsx  channels.xlsx  companies.xlsx  company_game.xlsx  deductions.xlsx  games.xlsx  publisher_game.xlsx  publisher_split.xlsx  publishers.xlsx  raw_transactions.xlsx
backend/tests/: conftest.py  test_auth.py  test_auth_api.py  test_bill_export.py  test_bill_template_api.py  test_bill_template_service.py  test_channel_company_mapping.py  test_channel_settlement.py  test_channels_batch.py  test_lan.py  (+31 more)
docs/: business-model.md  project-intro.md  对账模板标记参考.md  模板配置词条.md
frontend/: .env.example  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.js
(+54 files in other folders)
