[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finance-settlement"
version = "1.0.0"
description = "财务结算系统 — Financial Settlement System for mobile gaming revenue splits"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Finance Settlement Contributors" },
]
keywords = [
    "finance", "settlement", "gaming", "revenue-split", "channel-settlement",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]
secure = [
    "bcrypt>=4.1.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.setuptools.packages.find]
include = ["backend*"]
